# fun2

./: .gitignore  Makefile.am  Makefile.in  README.md  compile.sh  config.h.in  configure  configure.ac  dist-install.in  installer.sh  lib  package.sh
ards/: ARDSResponse.sh  compile.ards.sh  installer.sh  shutdown.sh
ards/cfg/: ARDSResponse.cfg
ards/scripts/: OPSMainMenuAll4.mnu  fun2.sh  menu2.mnu  nohup.out  tomcat_logarchive.sh
cfg/: consumer.cert.pem  fun2_broadcast.cfg  fun2_broadcast_tm.cfg  fun2_default_unli.cfg  fun2_mlp.cfg  fun2_notification.cfg  fun2_request.cfg  fun2_response.cfg  fun2_shampoo.cfg  fun2_transaction.cfg  fun2_transaction.cfg-old  fun2_transaction_tm.cfg
cfg/prod/: fun2_broadcast.cfg  fun2_request.cfg  fun2_response.cfg  fun2_transaction.cfg
docs/: ARDS_Messages.xlsx  Project FUN2-Default UNLI DFS v2.0.doc
ezxml/: GNUmakefile
fun2rc/: Makefile.in  configure  configure.ac  subdirs
fun2rc/ccb/: Makefile.in  ccb.cpp  ccb.hpp  oradb.cpp  oradb.hpp
fun2rc/hlr/: Makefile.in  hlr.cpp  hlr.cpp.bak  hlr.cpp.last  hlr.cpp.new  hlr.cpp.old  hlr.hpp  hlr.hpp.last  hlr.hpp.old  hlr_commands.txt  oradb.hpp  oradbsimple.cpp  tags
fun2rc/hlr2/: Makefile.in  hlr2.cpp  hlr2.hpp  hlr_commands.txt  httpclient.cpp  httpclient.hpp  test.cpp  test.sh
fun2rc/include/: config.h.in  fun2rc.hpp
fun2rc/nsn/: Makefile.in  nsn.cpp  nsn.cpp.bak  nsn.hpp  oradb.cpp  tags
fun2rc/rbt/: Makefile.in  rbt.cpp  rbt.hpp  tags
fun2rc/sset/: Makefile.in  Makefile.test  httpclient.cpp  httpclient.hpp  sset.cpp  sset.hpp  sset.res  sset.url  test.cpp
fun2rc/test/: Makefile.in  test.cpp  test_sset.cpp
libfuc/: configure  configure.ac
libfuc/include/: c2q.h  cfg.h  config.h.in  date.h  file.h  hash.h  libfuc.h  log.h  mydb.h  net.h  skt.h  str.h  sys.h
libfuc/src/: Makefile.in  c2q.c  cfg.c  date.c  file.c  hash.c  log.c  mydb.c  net.c  regx.c  skt.c  str.c  sys.c  tags  web.c
mxml/: mxmldoc  mxmldoc-static  testmxml
mxml/doc/: mxml.man
schema/deployment/: FUN2_Conditioner_Routines.sql  FUN2_Conditioner_Tables.sql  FUN2_Greencard_Activation_Routines.sql  FUN2_Greencard_Activation_Tables.sql  FUN2_Greencard_Coexistence_Routines.sql  FUN2_Greencard_Coexistence_Tables.sql  FUN2_Greencard_Routines.sql  FUN2_Greencard_Tables.sql  FUN2_Jackhammer_Routines.sql  FUN2_Jackhammer_Tables.sql  FUN2_MLP_Routines.sql  FUN2_MLP_Tables.sql  FUN2_Matrix_Routines.sql  FUN2_Reishi_Routines.sql  FUN2_Reishi_Tables.sql  FUN2_Shampoo_Routines.sql  FUN2_Shampoo_Tables.sql  FUN2_TM_360_Routines.sql  FUN2_TM_360_Tables.sql
schema/dmp/: dropcat.sql  dropo.sql  dropobj.sql  imp.sh  prod.txt  trigger-20091028_1330-schema.dmp
schema/src/: DAILY_BAL_n_GEO_PROBE.sql  FUN2 Stored Routines.sql  FUN2 Tables.sql  FUN2_Stored_Routines.sql  FUN2_Tables.sql  IMSI_mapping.sql  LINK_UPDATES.sql  PREACTIVATION_TRIGGER.sql  SF_IS_BLACKLISTED.sql  SP_INIT_TRAN.sql  SP_PROCESS_FOR_CANCEL.sql  SP_PROCESS_GEO_PROBE.sql  SP_PROCESS_ODS.sql  SP_PROCESS_TRAN.sql  create_db.sql  default_unli_schema.sql  default_unli_schema_final.sql  default_unli_schema_v2.sql  default_unli_schema_v3.sql  fun2-cpk-msgs.sql  fun2-cpk-msgs.txt  fun2-curl-commands.txt  fun2.sql  fun2_gen_optimus_filedata.sql  fun2_gen_optimus_filelist.sql  fun2_gen_optimus_fnamedata.sql  fun2_gen_optimus_fnamelist.sql  fun2_upd-20090817.sql  fun2_upd-20090825.sql  fun2_upd-20090904.sql  fun2_upd-20090911.sql  fun2_upd-20090916.sql  fun2_upd-20090930.sql  fun2_upd-20091005.sql  fun2_upd-20091016.sql  fun2_upd-20091026.sql  fun2_upd-20091028.sql  fun2_upd-20110624.sql  fun2_upd-20121002.sql  fun2_upd-20170227.sql  (+9 more)
scripts/: OPSMainMenuAll4.mnu  conn_check.sh  dbcheck.sh  dynamicMenu4.sh  fun2.sh  fun2_cancel.sh  fun2_cipher.sh  fun2_conditioner_expiry.sh  fun2_dailybal_chk.sh  fun2_deactivate.sh  fun2_default_unli.sh  fun2_expiry.sh  fun2_gen_mlp_data.sql  fun2_gen_mlp_file.sql  fun2_gen_optimus_filedata.sql  fun2_gen_optimus_filelist.sql  fun2_gen_optimus_fnamedata.sql  fun2_gen_optimus_fnamelist.sql  fun2_mlp_ftp.sh  fun2_mlp_notifications.sh  fun2_mlp_report.sh  fun2_optimus.sh  fun2_optimus_report.sh  fun2_unli_notification.sh  healthcheck.sh  menu2.mnu  transfer.sh  ziplogs.sh
src/: Makefile.am  Makefile.in  base64.cpp  base64.hpp  broadcast_handler.cpp  broadcast_handler.hpp  ccb_handler.cpp  ccb_handler.hpp  config.cpp  config.hpp  data_struct.hpp  default_unli_handler.cpp  default_unli_handler.hpp  ecsv.cpp  ecsv.hpp  fun2_broadcast.cpp  fun2_default_unli  fun2_default_unli.cpp  fun2_geoprobe.cpp  fun2_mlp  fun2_mlp.cpp  fun2_notification.cpp  fun2_ods.cpp  fun2_request.cpp  fun2_response.cpp  fun2_shampoo  fun2_shampoo.cpp  fun2_transaction.cpp  geoprobe_handler.cpp  geoprobe_handler.hpp  global.cpp  global.hpp  hlr.cpp  hlr.hpp  httpclient.cpp  httpclient.hpp  httpdb.cpp  httpdb.hpp  httpserver.cpp  httpserver.hpp  (+50 more)
trigger/: Copy of testoraconn.php  add_acl_master.php  add_country.php  add_customer.php  add_custtype_mapping.php  add_hlrimsi_mapping.php  add_hlrsrvr.php  add_hlrsrvr_mapping.php  add_insrvr.php  add_insrvr_mapping.php  add_keyword.php  add_keyword_msg.php  add_plmn_mapping.php  add_role_master.php  add_service.php  add_sset_mapping.php  add_user_master.php  add_zone.php  bulk_activation.php  bulk_blacklisting.php  bulk_custtype_mapping.php  bulk_custtype_processing.php  bulk_deactivation.php  bulk_fun_activation.php  bulk_fun_deactivation.php  bulk_whitelisting.php  change_user_pass.php  delete_acl_master.php  delete_all_custtype_mapping.php  delete_country.php  delete_customer.php  delete_custtype_mapping.php  delete_hlrimsi_mapping.php  delete_hlrsrvr.php  delete_hlrsrvr_mapping.php  delete_insrvr.php  delete_insrvr_mapping.php  delete_keyword.php  delete_keyword_msg.php  delete_plmn_mapping.php  (+73 more)
trigger/cgi-bin/: list_gcash_log_master.php  list_gcash_log_master.tpl  list_tran_key_log_master.php  list_tran_key_log_master.tpl  list_tran_log_master.php  list_tran_log_master.tpl  list_tran_req_log_master.php  list_tran_req_log_master.tpl
trigger/css/: default.css  default_old.css  styles.css
(+214 files in other folders)
